syntax = "proto3";
package lorenzo.btcstaking.v1;

import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
//import "cosmos/staking/v1beta1/staking.proto";

option go_package = "github.com/Lorenzo-Protocol/lorenzo/x/btcstaking/types";

message BTCStakingRecord {
  bytes tx_hash = 1;
  uint64 amount = 2;
  bytes mint_to_addr = 3;
  string btc_receiver_name = 4;
  string btc_receiver_addr = 5;
}
