syntax = "proto3";
package lorenzo.fee.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "lorenzo/fee/v1/params.proto";

option go_package = "github.com/Lorenzo-Protocol/lorenzo/v2/x/fee/types";

// Query defines the gRPC querier service.
service Query {
  // Params queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/lorenzo/fee/v1/params";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}
